--- a/index.html
+++ b/index.html
@@ -3,119 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Змейка</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #000;
-            color: #fff;
-            font-family: Arial, sans-serif;
-        }
-        canvas {
-            border: 1px solid #fff;
-        }
-    </style>
+    <title>TON Mini App</title>
+    <link rel="stylesheet" href="styles/style.css"> <!-- Подключение CSS -->
 </head>
 <body>
-    <canvas id="game" width="400" height="400"></canvas>
-    <script>
-        const canvas = document.getElementById('game');
-        const ctx = canvas.getContext('2d');
+    <h1>TON Mini App</h1>
+    <button id="connect-wallet">Подключить кошелёк</button>
+    <p id="wallet-status">Кошелёк не подключён</p>
+    <div id="referral-section" style="display: none;">
+        <h2>Реферальная программа</h2>
+        <p>Ваша реферальная ссылка: <span id="referral-link"></span></p>
+    </div>
 
-        const gridSize = 20;
-        const tileCount = canvas.width / gridSize;
-
-        let snake = [{ x: 10, y: 10 }];
-        let food = { x: 5, y: 5 };
-        let direction = { x: 0, y: 0 };
-        let score = 0;
-
-        function gameLoop() {
-            update();
-            draw();
-            setTimeout(gameLoop, 100);
-        }
-
-        function update() {
-            const head = { x: snake[0].x + direction.x, y: snake[0].y + direction.y };
-
-            // Проверка на столкновение с границами
-            if (head.x < 0 || head.x >= tileCount || head.y < 0 || head.y >= tileCount) {
-                resetGame();
-                return;
-            }
-
-            // Проверка на столкновение с собой
-            if (snake.some(segment => segment.x === head.x && segment.y === head.y)) {
-                resetGame();
-                return;
-            }
-
-            // Добавление новой головы
-            snake.unshift(head);
-
-            // Проверка на съедание еды
-            if (head.x === food.x && head.y === food.y) {
-                score++;
-                placeFood();
-            } else {
-                snake.pop();
-            }
-        }
-
-        function draw() {
-            // Очистка экрана
-            ctx.fillStyle = '#000';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            // Отрисовка змейки
-            ctx.fillStyle = '#0f0';
-            snake.forEach(segment => ctx.fillRect(segment.x * gridSize, segment.y * gridSize, gridSize, gridSize));
-
-            // Отрисовка еды
-            ctx.fillStyle = '#f00';
-            ctx.fillRect(food.x * gridSize, food.y * gridSize, gridSize, gridSize);
-
-            // Отрисовка счета
-            ctx.fillStyle = '#fff';
-            ctx.font = '20px Arial';
-            ctx.fillText(`Счет: ${score}`, 10, 30);
-        }
-
-        function placeFood() {
-            food = {
-                x: Math.floor(Math.random() * tileCount),
-                y: Math.floor(Math.random() * tileCount)
-            };
-
-            // Проверка, чтобы еда не появилась на змейке
-            if (snake.some(segment => segment.x === food.x && segment.y === food.y)) {
-                placeFood();
-            }
-        }
-
-        function resetGame() {
-            snake = [{ x: 10, y: 10 }];
-            direction = { x: 0, y: 0 };
-            score = 0;
-            placeFood();
-        }
-
-        window.addEventListener('keydown', e => {
-            switch (e.key) {
-                case 'ArrowUp': if (direction.y === 0) direction = { x: 0, y: -1 }; break;
-                case 'ArrowDown': if (direction.y === 0) direction = { x: 0, y: 1 }; break;
-                case 'ArrowLeft': if (direction.x === 0) direction = { x: -1, y: 0 }; break;
-                case 'ArrowRight': if (direction.x === 0) direction = { x: 1, y: 0 }; break;
-            }
-        });
-
-        placeFood();
-        gameLoop();
-    </script>
+    <!-- Подключение TON Connect SDK -->
+    <script src="https://unpkg.com/@tonconnect/sdk/dist/tonconnect-sdk.min.js"></script>
+    <!-- Подключение основного JavaScript-файла -->
+    <script src="app.js"></script>
 </body>
 </html>
